adding swagger description in Food and Delivery controller
